Fixed a visual bug with action button progress bars where the progress bar was incorrectly aligned in the center of the button

--- a/FrontEnd/Modules/Base/Css/kendo.wiser.css
+++ b/FrontEnd/Modules/Base/Css/kendo.wiser.css
@@ -1446,8 +1446,8 @@ k-filter-menu .k-autocomplete,
 		opacity: 1;
 		position: absolute;
 		top: unset;
-		left: unset;
 		right: unset;
+		left: 0;
 		bottom: 0;
 		height: 3px;
 		background-color: var(--kendo-color-primary);
